force-app/main/default/objects/SIOC__Financial_Account_Customer_Connection__c/SIOC__Financial_Account_Customer_Connection__c.object-meta.xml
<CustomObject>
    <description>The Financial Account Customer Connection junction object stores data between the Financial Account Information and Financial Account Customer for customers that share multiple accounts.</description>
    <label>Financial Account Customer Connection</label>
    <nameField>
        <displayFormat>FACC-{00000000}</displayFormat>
        <label>Financial Account Customer Connection Na</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Account Customer Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>