force-app/main/default/objects/SIOC__Financial_Account_Customer_Connection__c/fields/SIOC__Is_Funding_Enabled__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Is_Funding_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system automatically populates this checkbox to indicate if funding is enabled.</description>
    <inlineHelpText>The system-populated field indicates that funding is enabled for this account.</inlineHelpText>
    <label>Is Funding Enabled</label>
    <type>Checkbox</type>
</CustomField>