force-app/main/default/objects/SIOC__Financial_Account_Customer_Connection__c/fields/SIOC__Source__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Source__c</fullName>
    <description>The system automatically populates this picklist field with the account verification method or vendor.</description>
    <inlineHelpText>The system-populated field displays the method or vendor for account verification.</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unspecified</fullName>
            </value>
            <value>
                <fullName>Data Load</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>