force-app/main/default/objects/SIOC__Financial_Account_Customer_Connection__c/fields/SIOC__Vendor_Account_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Vendor_Account_Reference_Id__c</fullName>
    <description>The system automatically populates this text field with a unique identifier for the account the vendor verifies.</description>
    <inlineHelpText>The system-populated field displays the unique identifier for the account the vendor verifies.</inlineHelpText>
    <label>Vendor Account Reference Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>