force-app/main/default/objects/SIOC__Financial_Account_Customer_Connection__c/fields/SIOC__Verification_Interaction_Id__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Verification_Interaction_Id__c</fullName>
    <description>The system automatically populates this text field with the Interaction record ID. The system creates the record when it verifies the connected Financial Account Information.</description>
    <inlineHelpText>The system-populated field displays the Salesforce Id of the Interaction record.</inlineHelpText>
    <label>Verification Interaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>